--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,50 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.sadun</groupId>
 	<artifactId>sadun-util</artifactId>
-	<version>1.6.0</version>
+	<version>1.13.0-CARTAGO</version>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
+	<licenses>
+		<license>
+			<name>LGPL version 2.1</name>
+			<url>https://www.gnu.org/licenses/old-licenses/lgpl-2.1.html</url>
+		</license>
+	</licenses>
+	<developers>
+		<developer>
+			<id>sadun</id>
+			<name>Cristiano Sadun</name>
+			<email>cristianosadun@hotmail.com</email>
+			<url>http://sadun-util.sourceforge.net/</url>
+			<roles>
+				<role>author</role>
+				<role>developer</role>
+				<role>architect</role>
+			</roles>
+		</developer>
+		<developer>
+			<id>jreed</id>
+			<name>Jason Reed</name>
+			<email>j.reed@cartago.com</email>
+			<url>https://github.com/jreed-cartago</url>
+			<organization>Cartago Software GmbH</organization>
+			<organizationUrl>https://www.cartago.com</organizationUrl>
+			<roles>
+				<role>developer</role>
+				<role>maintainer</role>
+			</roles>
+		</developer>
+	</developers>
+	<!-- 
+	<scm>
+		<connection></connection>
+		<developerConnection></developerConnection>
+		<tag></tag>
+		<url></url>
+	</scm>
+	 -->
 </project>
