--- a/pom.xml
+++ b/pom.xml
@@ -42,12 +42,42 @@
 			</roles>
 		</developer>
 	</developers>
-	<!-- 
-	<scm>
-		<connection></connection>
-		<developerConnection></developerConnection>
-		<tag></tag>
-		<url></url>
-	</scm>
-	 -->
+	<!-- <scm> <connection></connection> <developerConnection></developerConnection> 
+		<tag></tag> <url></url> </scm> -->
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>3.2.0</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<phase>package</phase>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>3.2.0</version>
+				<configuration>
+					<show>public</show>
+					<nohelp>true</nohelp>
+				</configuration>
+				<executions>
+					<execution>
+						<id>javadoc</id>
+						<phase>package</phase>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
